cohorts ui basically done. Working on project now

--- a/blink_sass/components/_tab.sass
+++ b/blink_sass/components/_tab.sass
@@ -2,6 +2,10 @@
     margin-left: -10px
     margin-right: -10px
 
+.disabled
+    pointer-events: none
+    opacity: 0.9
+
 .nav-tabs
     background-color: #fff
     border-bottom: 1px solid darken($white, 15%)
