--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -58,7 +58,7 @@
             {% if cohort.perm.perm == 'OWNER' %}
             <li class="menu-item"><button class="btn btn-info" data-toggle="modal" data-target="#share-cohort-modal">Share</button></li>
             {% endif %}
-            <li class="menu-item"><a data-target="#share-cohort-modal" data-toggle="modal" class="btn btn-link" id="shared-with-btn" {% if shared_with_users|length < 1 %}disabled{% endif %}>Shared with ({{ shared_with_users|length}})</a></li>
+            <li class="menu-item"><a data-target="#share-cohort-modal" data-toggle="modal" class="btn btn-link" id="shared-with-btn">Shared with ({{ shared_with_users|length}})</a></li>
         </ul>
         <ul id="edit-cohort-menu" style="display: none">
             {% if cohort.perm.perm == 'OWNER' %}
@@ -275,7 +275,7 @@
                         {% if cohort.perm.perm == 'OWNER' %}
                             <li role="presentation" class="active"><a data-target="#share-cohort-pane" data-toggle="tab" aria-controls="home" role="tab" id="shareCohortModal">Share Cohort</a></li>
                         {% endif %} 
-                        <li role="presentation"><a data-target="#shared-pane" data-toggle="tab" aria-controls="home" role="tab" {% if shared_with_users|length < 1 %}disabled{% endif %} >Shared With ({{shared_with_users|length}})</a></li>
+                        <li role="presentation"><a data-target="#shared-pane" data-toggle="tab" aria-controls="home" role="tab">Shared With ({{shared_with_users|length}})</a></li>
                     </ul>
                 </div>
 
