--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -12,20 +12,21 @@
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
     </ol>
-    <h1 class="page-header">Projects</h1>
+    <h1 class="page-header pull-left">Projects</h1>
+    <a href="{% url 'project_upload' %}" class="btn btn-primary pull-right"><i class="fa fa-cloud-upload"></i>Upload Data</a>
 {% endblock %}
 {% block content %}
 <div class="container">
-    <div>
-        <div class="panel tab-content">
-             <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active">
-                    <a href="#save-projects-list" aria-controls="save-projects-list" role="tab" data-toggle="tab">Saved Projects</a>
-                </li>
-                <li role="presentation">
-                    <a href="#public-projects-list" aria-controls="public-projects-list" role="tab" data-toggle="tab">Public Projects</a>
-                </li>
-            </ul>
+    <div class="panel">
+         <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active">
+                <a href="#save-projects-list" aria-controls="save-projects-list" role="tab" data-toggle="tab">Saved Projects</a>
+            </li>
+            <li role="presentation">
+                <a href="#public-projects-list" aria-controls="public-projects-list" role="tab" data-toggle="tab">Public Projects</a>
+            </li>
+        </ul>
+        <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="save-projects-list">
                 <table class="table table-striped tablesorter">
                     <thead>
@@ -48,7 +49,7 @@
                                     </ul>
                                 </div>
                             </td>
-                            <td class="name-col">Name of Project</td>
+                            <td class="name-col"><a href="{% url 'project_detail' 0 %}">Name of Project</a> </td>
                             <td>2</td>
                             <td>David Smith</td>
                             <td>(3)</td>
@@ -122,7 +123,6 @@
             </div>
         </div>
     </div>
-
 </div>
 {% endblock %}
 
