put in link for getting dbgap access

--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -20,7 +20,7 @@
         <hr>
         <p>Congratulations, {{ user_details.NIH_username }}! Your eRA account has been authenticated. Now we need to verify if you have dbGaP authorization. This process may take up to 24 hours.</p>
 
-        <a href="#">How to Apply for dbGaP Access</a>
+        <a href="https://dbgap.ncbi.nlm.nih.gov/aa/wga.cgi?page=login" target="_blank">How to Apply for dbGaP Access</a>
     {% else %} {# Both authorized #}
         <p><i class="fa fa-check-circle"></i> dbGaP Access Authorized</p>
         <hr>
