--- a/static/templates/upload_file_list_item.html
+++ b/static/templates/upload_file_list_item.html
@@ -5,10 +5,10 @@
     <td>
         <select class="form-control">
             <option value="" disabled selected hidden>-- Select Data Type --</option>
-            <option value="protein">Protein Expression</option>
             <option value="methylation">DNA Methylation</option>
-            <option value="mirna_mirna">microRNA</option>
-            <option value="mrna_bcgsc">Gene Expression</option>
+            <option value="mrna">Gene Expression</option>
+            <option value="mirna">microRNA</option>
+            <option value="protein">Protein Expression</option>
             <option value="user_gen">Other</option>
         </select>
     </td>
