--- a/static/templates/upload_input_table.html
+++ b/static/templates/upload_input_table.html
@@ -1,10 +1,10 @@
 <div class="column-definitions" data-file="<%- uid %>">
     <h4>File <%- file.name %></h4>
     <label>
-        Platform (Optional) <input type="text" name="platform" class="form-control platform-field" placeholder="Platform Name">
+        Platform <input type="text" name="platform" class="form-control platform-field" placeholder="Platform Name" required>
     </label>
     <label>
-        Pipeline (Optional) <input type="text" name="pipline" class="form-control pipeline-field" placeholder="Pipeline Used">
+        Pipeline <input type="text" name="pipline" class="form-control pipeline-field" placeholder="Pipeline Used" required>
     </label>
     <% if(processed) { %>
     <p>Below are all the fields we detected for the selected file. Please verify the field names and data types are correct.</p>
