adjusted project views with status message

--- a/blink_sass/components/manifest.sass
+++ b/blink_sass/components/manifest.sass
@@ -1,10 +1,11 @@
-@import header
-@import nav
-@import panel
-@import dropdown
-@import table
-@import tokenfield
+@import "header"
+@import "nav"
+@import "panel"
+@import "dropdown"
+@import "table"
+@import "tokenfield"
 @import "listgroup"
 @import "tab"
 @import "label"
 @import "modal"
+@import "message"
