--- a/blink_sass/components/_panel.sass
+++ b/blink_sass/components/_panel.sass
@@ -7,6 +7,10 @@
       color: inherit
       text-decoration: none
 
+  &-primary
+    .panel-heading .dropdown > a
+      color: $white
+
   &-default
     .panel-body
       padding-top: 5px
