fixed tab styling issue on hover and added active animation

--- a/blink_sass/components/_panel.sass
+++ b/blink_sass/components/_panel.sass
@@ -8,8 +8,9 @@
       text-decoration: none
 
   &-primary
-    .panel-heading .dropdown > a
-      color: $white
+    .panel-heading .dropdown
+      > a
+        color: $white
 
   &-default
     .panel-body
