updated style guide

--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -28,6 +28,8 @@
 
 .btn-link
   font-weight: $regular-font-weight
+  &:focus, &:active, &:focus:active, &.active
+    outline: transparent
 
 .btn-oval
   border-radius: 50%
