--- a/blink_sass/variables.sass
+++ b/blink_sass/variables.sass
@@ -123,7 +123,7 @@ $panel-default-heading-bg:    $white
 // --------------------------------------------
 $breadcrumb-padding-horizontal: 0
 //** Breadcrumb background color
-$breadcrumb-bg:                 #fff
+$breadcrumb-bg:                 transparent
 //** Breadcrumb text color
 $breadcrumb-color:              $isb-info
 //** Text color of current page in the breadcrumb
