Hook up project list page

--- a/blink_sass/projects.sass
+++ b/blink_sass/projects.sass
@@ -56,3 +56,28 @@
 
         &:nth-child(2)
           text-decoration: line-through
+
+#save-projects-list, #public-projects-list
+
+  .table
+    .row-odd
+      background-color: #EFEFEF
+
+    .row-expand-button, .dropdown-arrow
+      cursor: pointer
+
+    .name-col
+      width: 30%
+
+    .dropdown-arrow
+      margin-right: 12px
+
+    .study
+      td
+        border-color: #EFEFEF
+
+      .name-col
+        padding-left: 15px
+
+        .fa
+          padding-right: 8px
