trying to get localtime in user_detail template

--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -57,7 +57,7 @@
 
                     <tr>
                         <td>Last Logged In</td>
-                        <td>{{ user_details.last_login|localtime }} in {{ TIME_ZONE }}</td>
+                        <td>{{ user_details.last_login|localtime }}</td>
                     </tr>
 {#                    <tr>#}
 {#                        <td>Date Joined</td>#}
