--- a/templates/GenespotRE/user_detail.html
+++ b/templates/GenespotRE/user_detail.html
@@ -57,7 +57,7 @@
 
                     <tr>
                         <td>Last Logged In</td>
-                        <td>{{ user_details.last_login|localtime }}</td>
+                        <td>{{ user_details.last_login|localtime }} in {{ TIME_ZONE }} time.</td>
                     </tr>
 {#                    <tr>#}
 {#                        <td>Date Joined</td>#}
@@ -80,7 +80,6 @@
                     {% endblock %}
                 {% else %}
                     <p>NIH Authorization currently disabled.</p>
-                    <p>{{ TIME_ZONE }}</p>
                 {% endif %}
             </div>
         </div>
